grammar.txt
<beer> ::= <name> <type> <alcohol_content> "(" <ingredients> ")"
<name> ::= "PaleAle" | "Guinness"
<type> ::= "Lager" | "Ale" | "Stout"
<alcohol_content> ::= <number> "%"

<number> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
 
<ingredients> ::= <ingredient> | <ingredient> <ingredients>
<ingredient> ::= "Malt" | "Hops" | "Yeast" | "Water"

<recipe> ::= "(" <type> <ingredients> <process> ")"

<process> ::= "(" "Mash" <time> "Boil" <time> "Ferment" <time> "Condition" <time> ")"

<bags> ::= <bag> | <bag> <bags>
<bag> ::= <ingredients> | <bags> <ingredients>

<period> ::= "minutes" | "hour" | "weeks" | "month" | "months"
<time> ::= <number> <period>

<brew_command> ::= "brewBeer" <recipe>

<add_ingredient_command> ::= "addIngredient" <ingredient> <recipe>
